# cmake-exercise

./: CMakeLists.txt  Dockerfile
